# BermudOS

./: .gitignore  CMakeLists.txt  Makefile  README.md
boot/: Makefile  README.md  _memtypes.h  boot.asm  kernel.c  linker.ld  memcpy.c  memcpy.h  memset.c  terminal.c  terminal.h
boot/iso/boot/grub/: grub.cfg
cmake/Modules/: CMakeASM-NASMInformation.cmake  CMakeDetermineASM-NASMCompiler.cmake  CMakeTestASM-NASMCompiler.cmake
include/BermudOS/: ctype.h  div64.h  stdio.h  string.h  wait.h
include/BermudOS/strconv/: int.h  strconv.h
io/: CMakeLists.txt  Makefile  in.c  in.h  out.c  out.h
kernel/: CMakeLists.txt  Makefile  _memopti.c  _memopti.h  _memtypes.h  memcpy.c  memcpy.h  memset.c  memset.h
kernel/GDT/: gdt.asm  gdt.c  gdt.h
kernel/MSR/: MSR.c  MSR.h
kernel/interrupts/: idt.asm  idt.c  idt.h
kernel/interrupts/APIC/: apic.c  apic.h
kernel/interrupts/IRQ/: irq.c  irq.h  irq0.asm  irq1.asm  irq10.asm  irq11.asm  irq12.asm  irq13.asm  irq14.asm  irq15.asm  irq2.asm  irq3.asm  irq4.asm  irq5.asm  irq6.asm  irq7.asm  irq8.asm  irq9.asm  irq_management.asm
kernel/interrupts/ISR/: isr.c  isr.h  isr0.asm  isr1.asm  isr10.asm  isr11.asm  isr12.asm  isr13.asm  isr14.asm  isr15.asm  isr16.asm  isr17.asm  isr18.asm  isr19.asm  isr2.asm  isr20.asm  isr21.asm  isr22.asm  isr23.asm  isr24.asm  isr25.asm  isr26.asm  isr27.asm  isr28.asm  isr29.asm  isr3.asm  isr30.asm  isr31.asm  isr4.asm  isr5.asm  isr6.asm  isr7.asm  isr8.asm  isr9.asm  isr_management.asm
kernel/interrupts/PIT/: interval_timer.c  interval_timer.h
kernel/keyboard/: keyboard.c  keyboard.h
kernel/terminal/: terminal.c  terminal.h
kernel/video/: VGA_management.c  VGA_management.h
libc/: CMakeLists.txt  Makefile
libc/BermudOS/: wait.c
libc/ctype/: isalpha.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  tolower.c  toupper.c
libc/stdio/: printf.c  printf.h  putchar.c  puts.c  sprintf.c  sprintf.h
libc/strconv/: int.c
libc/string/: memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strcspn.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c
