set(SOURCES
        "interrupts/APIC/apic.c"
		"interrupts/idt.c"
		"interrupts/ISR/isr0.asm"
		"interrupts/ISR/isr1.asm"
		"interrupts/ISR/isr2.asm"
		"interrupts/ISR/isr3.asm"
		"interrupts/ISR/isr4.asm"
		"interrupts/ISR/isr5.asm"
		"interrupts/ISR/isr6.asm"
		"interrupts/ISR/isr7.asm"
		"interrupts/ISR/isr8.asm"
		"interrupts/ISR/isr9.asm"
		"interrupts/ISR/isr10.asm"
		"interrupts/ISR/isr11.asm"
		"interrupts/ISR/isr12.asm"
		"interrupts/ISR/isr13.asm"
		"interrupts/ISR/isr14.asm"
		"interrupts/ISR/isr15.asm"
		"interrupts/ISR/isr16.asm"
		"interrupts/ISR/isr17.asm"
		"interrupts/ISR/isr18.asm"
		"interrupts/ISR/isr19.asm"
		"interrupts/ISR/isr20.asm"
		"interrupts/ISR/isr21.asm"
		"interrupts/ISR/isr22.asm"
		"interrupts/ISR/isr23.asm"
		"interrupts/ISR/isr24.asm"
		"interrupts/ISR/isr25.asm"
		"interrupts/ISR/isr26.asm"
		"interrupts/ISR/isr27.asm"
		"interrupts/ISR/isr28.asm"
		"interrupts/ISR/isr29.asm"
		"interrupts/ISR/isr30.asm"
		"interrupts/ISR/isr31.asm"
		"interrupts/ISR/isr_management.asm"
		"interrupts/ISR/isr.c"
		#
		"interrupts/IRQ/irq0.asm"
		"interrupts/IRQ/irq1.asm"
		"interrupts/IRQ/irq2.asm"
		"interrupts/IRQ/irq3.asm"
		"interrupts/IRQ/irq4.asm"
		"interrupts/IRQ/irq5.asm"
		"interrupts/IRQ/irq6.asm"
		"interrupts/IRQ/irq7.asm"
		"interrupts/IRQ/irq8.asm"
		"interrupts/IRQ/irq9.asm"
		"interrupts/IRQ/irq10.asm"
		"interrupts/IRQ/irq11.asm"
		"interrupts/IRQ/irq12.asm"
		"interrupts/IRQ/irq13.asm"
		"interrupts/IRQ/irq14.asm"
        "interrupts/IRQ/irq15.asm"
        "interrupts/IRQ/irq_management.asm"
        "interrupts/IRQ/irq.c"
        #
        "interrupts/PIT/interval_timer.c"
        #
        "MSR/MSR.c"
        #
        "terminal/terminal.c"
        #
        "video/VGA_management.c"
		#
		"GDT/gdt.c"
		"GDT/gdt.asm"
    )

add_library(kernel ${SOURCES})

